Gradle: Fix build issues with Java 8